--- a/.github/workflows/scorecards-analysis.yml
+++ b/.github/workflows/scorecards-analysis.yml
@@ -6,9 +6,7 @@ on:
     - cron: '10 5 * * 1'
   push:
     branches: [ main ]
-
-# Declare default permissions as read only.
-permissions: read-all
+  workflow_call:
 
 jobs:
   analysis:
@@ -31,7 +29,7 @@ jobs:
           persist-credentials: false
 
       - name: "Run analysis"
-        uses: ossf/scorecard-action@0864cf19026789058feabb7e87baa5f140aac736 # v2.3.1
+        uses: ossf/scorecard-action@62b2cac7ed8198b15735ed49ab1e5cf35480ba46 # v2.4.0
         with:
           results_file: results.sarif
           results_format: sarif
