--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,6 +1,9 @@
 name: NPM Package Publish - Reusable Workflow
 on:
   workflow_call:
+    secrets:
+      NODE_AUTH_TOKEN:
+        required: true
   release:
     types: [created]
 
@@ -22,4 +25,4 @@ jobs:
       - run: npm ci --ignore-scripts
       - run: npm publish --provenance
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_SECRET }}
+          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
