--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,11 @@
 name: Release - Reusable Workflow
 on:
+  workflow_call:
+    secrets:
+      GITHUB_PAT:
+        required: true
   push:
     branches: [main]
-
-permissions: read-all
 
 jobs:
   release:
@@ -16,7 +18,7 @@ jobs:
         uses: step-security/harden-runner@v2
         with:
           egress-policy: audit
-      - uses: google-github-actions/release-please-action@v4
+      - uses: googleapis/release-please-action@v4
         with:
-          token: ${{ secrets.GH_PAT }}
+          token: ${{ secrets.GITHUB_PAT }}
           release-type: node
