--- a/.github/workflows/pnpm-publish.yml
+++ b/.github/workflows/pnpm-publish.yml
@@ -24,7 +24,7 @@ jobs:
           registry-url: https://registry.npmjs.org
           cache: pnpm
       - run: pnpm i --prefer-offline
-      - run: pnpm run build --if-present
+      - run: pnpm --if-present run build
       - run: pnpm publish --no-git-checks
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
