--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,9 +1,6 @@
 name: NPM Package Publish - Reusable Workflow
 on:
   workflow_call:
-    secrets:
-      NODE_AUTH_TOKEN:
-        required: true
   release:
     types: [created]
 
@@ -12,6 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
+      contents: read
     steps:
       - name: Harden Security
         uses: step-security/harden-runner@v2
@@ -20,10 +18,11 @@ jobs:
       - uses: actions/checkout@v6
       - uses: actions/setup-node@v6
         with:
+          node-version: "lts/*"
           registry-url: https://registry.npmjs.org
           cache: npm
       - run: npm ci --ignore-scripts
       - run: npm run build --if-present
       - run: npm publish --provenance
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+          NPM_CONFIG_PROVENANCE: true
